--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -30,6 +30,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.517"
+            tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="40dp"
             tools:layout_conversion_absoluteWidth="40dp" />
 
@@ -44,6 +45,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/carrito_icon"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="40dp"
             tools:layout_conversion_absoluteWidth="40dp" />
 
@@ -61,6 +63,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.533"
+            tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="40dp"
             tools:layout_conversion_absoluteWidth="40dp" />
 
@@ -80,6 +83,7 @@
             app:layout_constraintEnd_toStartOf="@+id/perfil"
             app:layout_constraintStart_toEndOf="@+id/menu"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="70dp"
             tools:layout_conversion_absoluteWidth="245dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -112,90 +116,103 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
 
-            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
-                android:id="@+id/carousel"
-                android:layout_width="match_parent"
-                android:layout_height="275dp"
+            <Button
+                android:id="@+id/back"
+                android:layout_width="127dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/back"
+                android:textColor="#455A64"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:id="@+id/irEstudio"
+                android:layout_width="135dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="55dp"
+                android:layout_marginBottom="8dp"
+                android:text="Ir estudio disponible"
+                android:textColor="#455A64"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/back" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Carrito"
+                android:textSize="34sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btn_signin"
-                android:layout_width="288dp"
-                android:layout_height="46dp"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="158dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/iniciar_sesion"
-                android:textColor="#455A64"
-                app:layout_constraintBottom_toTopOf="@+id/textView"
+            <View
+                android:id="@+id/divider"
+                android:layout_width="391dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="?android:attr/listDivider"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.509"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/carousel" />
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="158dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/no_tienes_una_cuenta"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_signup"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/carrito_estudioTitulo"
+                style="@style/Widget.Inventory.Header"
+                android:layout_marginStart="@dimen/margin_between_elements"
+                android:text="Estudio"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/carrito_informacionTitulo"
+                app:layout_constraintHorizontal_weight="0.2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
-
-            <Button
-                android:id="@+id/btn_signup"
-                android:layout_width="288dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="158dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/registrate"
-                android:textColor="#455A64"
-                app:layout_constraintBottom_toTopOf="@+id/textView2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.516"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toTopOf="@+id/divider" />
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="158dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/o"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_guest"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
+                android:id="@+id/carrito_informacionTitulo"
+                style="@style/Widget.Inventory.Header"
+                android:layout_below="@+id/carrito_estudioTitulo"
+                android:layout_marginTop="8dp"
+                android:text="Informacion"
+                android:textAlignment="textStart"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/carrito_precioTitulo"
+                app:layout_constraintHorizontal_weight="0.3"
+                app:layout_constraintStart_toEndOf="@+id/carrito_estudioTitulo"
+                app:layout_constraintTop_toTopOf="@+id/divider" />
 
-            <Button
-                android:id="@+id/btn_guest"
-                android:layout_width="288dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="158dp"
-                android:layout_marginBottom="70dp"
-                android:text="@string/continuar_como_invitado"
-                android:textColor="#455A64"
-                app:layout_constraintBottom_toBottomOf="parent"
+            <TextView
+                android:id="@+id/carrito_precioTitulo"
+                style="@style/Widget.Inventory.Header"
+                android:layout_alignParentEnd="true"
+                android:text="Precio"
+                android:textAlignment="textStart"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="0.3"
+                app:layout_constraintStart_toEndOf="@+id/carrito_informacionTitulo"
+                app:layout_constraintTop_toTopOf="@+id/divider" />
+
+            <View
+                android:id="@+id/divider2"
+                style="@style/Divider"
+                app:layout_constraintBottom_toTopOf="@+id/carrito_recy"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/carrito_precioTitulo" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/carrito_recy"
+                android:layout_width="395dp"
+                android:layout_height="289dp"
+                android:layout_marginTop="60dp"
+                android:scrollbars="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/divider" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
