--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -90,10 +90,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bloque_amarillo"
-        android:layout_width="0dp"
-        android:layout_height="700dp"
+        android:layout_width="392dp"
+        android:layout_height="786dp"
         android:layout_marginBottom="200dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,25 +118,14 @@
 
             <Button
                 android:id="@+id/back"
-                android:layout_width="127dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/back"
+                android:layout_width="134dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="228dp"
+                android:layout_marginBottom="68dp"
+                android:text="Continua viendo"
                 android:textColor="#455A64"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-
-            <Button
-                android:id="@+id/irEstudio"
-                android:layout_width="135dp"
-                android:layout_height="53dp"
-                android:layout_marginStart="55dp"
-                android:layout_marginBottom="8dp"
-                android:text="Ir estudio disponible"
-                android:textColor="#455A64"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/back" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -214,7 +203,74 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider" />
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="68dp"
+                android:backgroundTint="#8F8E8E"
+                android:text="Generar factura"
+                android:textColor="#212121"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/back" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/fondo_circulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/fondo_mediocirculo" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="48dp"
+            android:layout_height="33dp"
+            android:layout_marginEnd="280dp"
+            android:layout_marginBottom="96dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/correo_icon" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:text="Correo: Testfarma@gmail.com"
+            android:textColor="#2B2828"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/bloque_blanco" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="60dp"
+            android:text="Telefono: 66213871"
+            android:textColor="#2B2828"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/bloque_blanco" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="43dp"
+            android:layout_height="34dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="284dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bloque_blanco"
+            app:srcCompat="@drawable/telefono_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
