--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -120,6 +120,8 @@
                 android:id="@+id/carousel"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/username_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -213,7 +215,7 @@
             <Button
                 android:id="@+id/back"
                 android:layout_width="127dp"
-                android:layout_height="44dp"
+                android:layout_height="48dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/back"
